--- a/index.html
+++ b/index.html
@@ -25,6 +25,91 @@
 </head>
 
 <body>
+    <div>
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <div class="text-right">
+                        <span aria-hidden="true" class="btn-close" data-dismiss="modal" aria-label="Close">&times;</span>
+                    </div>
+                    <div class="tab-content nav nav-tabs border-0">
+                        <div id="login" class="tab-pane active">
+                            <h3 class="d-block text-center"><strong>Đăng nhập</strong></h3>
+                            <div style="height: 80px;" class="d-block text-center"><img src="img/logo/logonew-03.jpg" alt="" style="object-fit: cover; height: 100%;"></div>
+                            <div style="font-size: 13px;" class="d-block text-center">Đăng nhập để không bỏ lỡ quyền lợi tích luỹ cho bất kỳ đơn hàng nào</div>
+                            <div class="d-block text-center mt-1"><strong>Đăng nhập hoặc đăng ký (miễn phí)</strong></div>
+                            <a style="height: 40px;" class="d-block text-center google mt-2"><img src="img/logo/google.jpg" alt="" style="object-fit: cover; height: 100%; padding: 8px 0px;"></a>
+                            <div class="row">
+                                <div class="col-5"><hr></div>
+                                <div class="col-2">Hoặc</div>
+                                <div class="col-5"><hr></div>
+                            </div>
+                            <div class="d-flex flex-column text-center">
+                                <form>
+                                <div class="form-group">
+                                    <input type="email" class="form-control btn-round px-3" id="email1"placeholder="Email">
+                                </div>
+                                <div class="form-group">
+                                    <input type="password" class="form-control btn-round px-3" id="password1" placeholder="Mật khẩu">
+                                </div>
+                                <button type="button" class="btn btn-black btn-block btn-round">Đăng nhập</button>
+                                </form>
+                            </div>
+                            <!-- <div style="justify-content: space-between; padding: 5px 0px;" class="d-flex extendForm">
+                                <a data-toggle="tab" href="#register" style="cursor: pointer; color: cornflowerblue;">Đăng ký tài khoản mới</a>
+                                <a style="cursor: pointer; color: cornflowerblue;">Quên mật khẩu</a>
+                            </div> -->
+                        </div>
+                        <div id="register" class="tab-pane fade">
+                            <h3 class="d-block text-center"><strong>Đăng ký</strong></h3>
+                            <div style="height: 80px;" class="d-block text-center"><img src="img/logo/logonew-03.jpg" alt="" style="object-fit: cover; height: 100%;"></div>
+                            <div style="font-size: 13px;" class="d-block text-center">Đăng nhập để không bỏ lỡ quyền lợi tích luỹ cho bất kỳ đơn hàng nào</div>
+                            <div class="d-block text-center mt-1"><strong>Đăng nhập hoặc đăng ký (miễn phí)</strong></div>
+                            <a style="height: 40px;" class="d-block text-center google mt-2"><img src="img/logo/google.jpg" alt="" style="object-fit: cover; height: 100%; padding: 8px 0px;"></a>
+                            <div class="row">
+                                <div class="col-5"><hr></div>
+                                <div class="col-2">Hoặc</div>
+                                <div class="col-5"><hr></div>
+                            </div>
+                            <div class="d-flex flex-column text-center">
+                                <form>
+                                    <div class="d-inline-flex">
+                                        <div class="form-group w-50 mr-3">
+                                            <input type="email" class="form-control btn-round px-3" placeholder="Họ và tên">
+                                        </div>
+                                        <div class="form-group w-50">
+                                            <input type="email" class="form-control btn-round px-3" placeholder="Số điện thoại">
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="email" class="form-control btn-round px-3" id="email1"placeholder="Email">
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="password" class="form-control btn-round px-3" id="password1" placeholder="Mật khẩu">
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="password" class="form-control btn-round px-3" id="password2" placeholder="Nhập lại mật khẩu">
+                                    </div>
+                                    <button type="button" class="btn btn-black btn-block btn-round">Đăng ký</button>
+                                </form>
+                            </div>
+                            <!-- <div style="padding: 5px 0px;" class="extendForm">
+                                <a data-toggle="tab" href="#login" style="cursor: pointer; color: cornflowerblue;">Đăng nhập</a>
+                            </div> -->
+                        </div>
+                      </div>
+                      <ul style="justify-content: space-between; border: none; padding: 5px 0px;" class="nav nav-tabs extendForm" role="tablist">
+                        <li class="nav-item"><a data-toggle="tab" href="#login" class="mr-2 direction active">Đăng nhập</a><a style="cursor: pointer; color: #007bff;">Quên mật khẩu</a></li>
+                        <li class="nav-item"><a data-toggle="tab" href="#register" class="direction">Đăng ký tài khoản mới</a></li>
+                    </ul>
+                  </div>
+                </div>
+            </div>
+            </div>
+        </div>
+    </div>
     <!-- Page Preloder -->
     <div id="preloder">
         <div class="loader"></div>
@@ -72,8 +157,12 @@
                                 <span class="d-block">Yêu thích</span>
                             </div>
                             <div class="col-lg-2 col-md-2">
-                                <i class="fa fa-user-circle d-block text-danger text-center"></i>
-                                <span class="d-block text-center">Tài khoản</span>
+                                <i class="fa fa-user-circle d-block text-danger text-center" data-toggle="modal" data-target="#exampleModal"></i>
+                                <!-- Button trigger modal -->
+                                <!-- <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+                                    Launch demo modal
+                                </button> -->
+                                <span class="d-block text-cente cursor-pointer" data-toggle="modal" data-target="#exampleModal">Tài khoản</span>
                             </div>
                             <div class="col-lg-2 col-md-2">
                                 <i class="fa fa-shopping-bag d-block text-danger text-center"></i>
@@ -180,7 +269,7 @@
     <!-- Banner Section End -->
 
     <!-- Product Section Begin -->
-    <section class="product spad mt-4">
+    <section class="product spad pt-4">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -752,14 +841,14 @@
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-6 col-md-6 col-sm-6 mix hot-sales">
                     <div class="product__item">
-                        <div class="product__item__news set-bg" data-setbg="img/tintuc/route-tour-blog.png">
+                        <div class="product__item__news set-bg" data-setbg="img/tintuc/3.png">
                         </div>
                         <div class="p-2 text-center"><strong>ĐỒNG GIÁ 149K - 199K TOÀN BỘ CỬA HÀNG</strong></div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-6 col-md-6 col-sm-6 mix new-arrivals">
                     <div class="product__item sale">
-                        <div class="product__item__news set-bg" data-setbg="img/tintuc/hottt.png">
+                        <div class="product__item__news set-bg" data-setbg="img/tintuc/5.png">
                         </div>
                         <div class="p-2 text-center"><strong>101 CÁCH PHỐI ĐỒ ĐẸP MẮT ĐẦU NĂM 2024</strong></div>
                     </div>
