--- a/introduce.html
+++ b/introduce.html
@@ -85,7 +85,7 @@
     <!-- Hero Section End -->
 
     <!-- Product Section Begin -->
-    <section class="mt-4 product spad">
+    <section class="product spad">
         <div class="row mb-3">
             <h3 class="w-100 text-center p-3"><strong>GIỚI THIỆU</strong></h3>
         </div>
