--- a/product-details.html
+++ b/product-details.html
@@ -85,40 +85,118 @@
     <!-- Hero Section End -->
 
     <!-- Product Section Begin -->
-    <section class="product spad">
-        <div class="row mb-3">
-            <h3 class="w-100 text-center p-3"><strong>SẢN PHẨM</strong></h3>
-        </div>
-        <div class="container">
-            <div class="row">
-                <!-- Content Left -->
-                <div class="col-lg-3 col-md-3 col-sm-0 col-sm-0 prd-filter shop__sidebar">
-                    <div class="shop__sidebar__accordion">
-                        <div class="accordion" id="accordionExample">
-                            <div class="card">
-                                <div class="card-heading">
-                                    <a data-toggle="collapse" data-target="#collapseOne">Loại sản phẩm</a>
-                                </div>
-                                <div class="collapse show" data-parent="#accordionExample">
-                                    <div class="card-body">
-                                        <div class="shop__sidebar__categories">
-                                            <ul>
-                                                <li><a href="#">Áo phông</a></li>
-                                                <li><a href="#">Áo dài tay</a></li>
-                                                <li><a href="#">Áo khoác</a></li>
-                                                <li><a href="#">Quần</a></li>
-                                                <li><a href="#">Váy</a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
+    <section class="shop-details product spad">
+        <div class="product__details__pic">
+        
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6 col-md-9">
+                        <div class="tab-content h-100">
+                            <div class="tab-pane active h-100" id="tabs-4" role="tabpanel">
+                                <div class="product__details__pic__item h-100">
+                                    <img class="h-100" src="img/nu/aophong/aophong1/4.webp" alt="">
                                 </div>
                             </div>
-                            <div class="card">
-                                <div class="card-heading">
-                                    <a data-toggle="collapse" data-target="#collapseFour">Kích thước</a>
+                            <div class="tab-pane" id="tabs-5" role="tabpanel">
+                                <div class="product__details__pic__item">
+                                    <img src="img/nu/aophong/aophong1/5.webp" alt="">
                                 </div>
-                                <div class="collapse show" data-parent="#accordionExample">
-                                    <div class="card-body">
+                            </div>
+                            <div class="tab-pane" id="tabs-6" role="tabpanel">
+                                <div class="product__details__pic__item">
+                                    <img src="img/nu/aophong/aophong1/6.webp" alt="">
+                                </div>
+                            </div>
+                            <div class="tab-pane" id="tabs-1" role="tabpanel">
+                                <div class="product__details__pic__item">
+                                    <img src="img/nu/aophong/aophong1/1.webp" alt="">
+                                </div>
+                            </div>
+                            <div class="tab-pane" id="tabs-2" role="tabpanel">
+                                <div class="product__details__pic__item">
+                                    <img src="img/nu/aophong/aophong1/2.webp" alt="">
+                                </div>
+                            </div>
+                            <div class="tab-pane" id="tabs-3" role="tabpanel">
+                                <div class="product__details__pic__item">
+                                    <img src="img/nu/aophong/aophong1/3.webp" alt="">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-1 col-md-1">
+                        <ul class="nav nav-tabs" role="tablist">
+                            <li class="nav-item">
+                                <a class="nav-link active" data-toggle="tab" href="#tabs-4" role="tab">
+                                    <div class="product__thumb__pic set-bg" data-setbg="img/nu/aophong/aophong1/4.webp">
+                                    </div>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" data-toggle="tab" href="#tabs-5" role="tab">
+                                    <div class="product__thumb__pic set-bg" data-setbg="img/nu/aophong/aophong1/5.webp">
+                                    </div>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" data-toggle="tab" href="#tabs-6" role="tab">
+                                    <div class="product__thumb__pic set-bg" data-setbg="img/nu/aophong/aophong1/6.webp">
+                                    </div>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" data-toggle="tab" href="#tabs-1" role="tab">
+                                    <div class="product__thumb__pic set-bg" data-setbg="img/nu/aophong/aophong1/1.webp">
+                                    </div>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" data-toggle="tab" href="#tabs-2" role="tab">
+                                    <div class="product__thumb__pic set-bg" data-setbg="img/nu/aophong/aophong1/2.webp">
+                                    </div>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" data-toggle="tab" href="#tabs-3" role="tab">
+                                    <div class="product__thumb__pic set-bg" data-setbg="img/nu/aophong/aophong1/3.webp">
+                                    </div>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-lg-5 col-md-3 text-left">
+                        <div class="row ml-2">
+                            <div class="col-10">
+                                <div class="row">
+                                    <div class="col-lg-12 col-md-12">
+                                        <h4>Áo phông nữ cotton dáng ngắn in chữ</h4>
+                                    </div>
+                                    <div class="col-lg-12 col-md-12">
+                                        <span>18 đánh giá | Đã bán: 20</span>
+                                    </div>
+                                    <div class="col-lg-12 col-md-12">
+                                        <h4><strong>149.500 đ</strong></h4>
+                                    </div>
+                                    <div class="col-lg-12 col-md-12">
+                                        <h6><del>299.000 đ</del>   <strong class="text-danger"> -50%</strong></h6> 
+                                    </div>
+                                    <div class="col-lg-12 col-md-12">
+                                        <span>Màu sắc:</span>
+                                    </div>
+                                    <div class="col-lg-12 col-md-12">
+                                        <div class="shop__sidebar__color">
+                                            <label class="c-11" for="sp-11">
+                                                <input type="radio" id="sp-11">
+                                            </label>
+                                            <label class="c-10" for="sp-10">
+                                                <input type="radio" id="sp-10">
+                                            </label>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-12 col-md-12">
+                                        <span>Kích cỡ: <a href="#">Hướng dẫn chọn size</a></span>
+                                    </div>
+                                    <div class="col-lg-12 col-md-12">
                                         <div class="shop__sidebar__size">
                                             <label for="xs">xs
                                                 <input type="radio" id="xs">
@@ -140,103 +218,40 @@
                                             </label>
                                         </div>
                                     </div>
-                                </div>
-                            </div>
-                            <div class="card">
-                                <div class="card-heading">
-                                    <a data-toggle="collapse" data-target="#collapseFive">Màu sắc</a>
-                                </div>
-                                <div class="collapse show" data-parent="#accordionExample">
-                                    <div class="card-body">
-                                        <div class="shop__sidebar__color">
-                                            <label class="c-1" for="sp-1">
-                                                <input type="radio" id="sp-1">
-                                            </label>
-                                            <label class="c-2" for="sp-2">
-                                                <input type="radio" id="sp-2">
-                                            </label>
-                                            <label class="c-3" for="sp-3">
-                                                <input type="radio" id="sp-3">
-                                            </label>
-                                            <label class="c-4" for="sp-4">
-                                                <input type="radio" id="sp-4">
-                                            </label>
-                                            <label class="c-5" for="sp-5">
-                                                <input type="radio" id="sp-5">
-                                            </label>
-                                            <label class="c-6" for="sp-6">
-                                                <input type="radio" id="sp-6">
-                                            </label>
-                                            <label class="c-7" for="sp-7">
-                                                <input type="radio" id="sp-7">
-                                            </label>
-                                            <label class="c-8" for="sp-8">
-                                                <input type="radio" id="sp-8">
-                                            </label>
-                                            <label class="c-9" for="sp-9">
-                                                <input type="radio" id="sp-9">
-                                            </label>
-                                        </div>
+                                    <div class="col-lg-12 col-md-12">
+                                        <p class="text-primary"><i>Miễn phí giao hàng</i></p>
+                                    </div>
+                                    <div class="col-lg-12 col-md-12">
+                                        <button type="button" class="btn btn-red btn-block py-2"><i class="fa fa-heart"></i> Thêm yêu thích</button>
+                                    </div>
+                                    <div class="col-lg-4 col-md-4 my-2 pr-2">
+                                        <div class="number-input w-100">
+                                            <button onclick="this.parentNode.querySelector('input[type=number]').stepDown()" class="minus">-</button>
+                                            <input class="quantity" min="0" name="quantity" value="1" type="number">
+                                            <button onclick="this.parentNode.querySelector('input[type=number]').stepUp()" class="plus">+</button>
+                                          </div>
+                                    </div>
+                                    <div class="col-lg-8 col-md-8 my-2 pl-2">
+                                        <button type="button" class="btn border btn-block py-2 bg-white"><i class="fa fa-cart-plus"></i> Thêm vào giỏ hàng</button>
+                                    </div>
+                                    <div class="col-lg-12 col-md-12">
+                                        <button type="button" class="btn btn-black btn-block">Mua ngay</button>
                                     </div>
                                 </div>
                             </div>
-                            <div class="card" style="height: 140px;">
-                                <div class="card-heading">
-                                    <a data-toggle="collapse" data-target="#collapseSix">Khoảng giá</a>
-                                </div>
-                                <div class="collapse show" data-parent="#accordionExample">
-                                    <div class="card-body">
-                                        <div class="shop__sidebar__tags">
-                                            <div class="display">
-                                                <span id="min">10</span>
-                                                <span id="max">100</span>
-                                              </div>
-                                            <div class="range-slide">
-                                                <div class="slide">
-                                                  <div class="line" id="line" style="left: 0%; right: 0%;"></div>
-                                                  <span class="thumb" id="thumbMin" style="left: 0%;"></span>
-                                                  <span class="thumb" id="thumbMax" style="left: 100%;"></span>
-                                                </div>
-                                                <input id="rangeMin" type="range" max="100" min="10" step="5" value="0">
-                                                <input id="rangeMax" type="range" max="100" min="10" step="5" value="100">
-                                              </div>
-                                              
-                                        </div>
-                                    </div>
-                                </div>
+                            <div class="col-6">
+                                <strong><i class="fa fa-credit-card" aria-hidden="true"></i> Thanh toán an toàn</strong>
+                            </div>
+                            <div class="col-6">
+                                <strong><i class="fa fa-shirt"></i> Sản phẩm chất lượng</strong>
+                            </div>
+                            <div class="col-6">
+                                <strong><i class="fa fa-truck" aria-hidden="true"></i> Miễn phí giao hàng</strong>
+                            </div>
+                            <div class="col-6">
+                                <strong><i class="fa fa-retweet" aria-hidden="true"></i> Miễn phí đổi trả</strong>
                             </div>
                         </div>
-                    </div>
-                </div>
-                <!-- Content Right -->
-                <div class="col-lg-9 col-md-9 col-sm-12 col-sm-12">
-                    <div class="row">
-                        <div class="col-lg-12 col-md-12 col-sm-12 col-md-12 col-sm-12 mb-3">
-                            <strong><i class="fa fa-bars" aria-hidden="true"></i>  Sắp xếp theo</strong>
-                        </div>
-                    </div>
-                    <div id="productList" class="row product__filter">
-                    </div>
-                    <div class="row justify-content-end">
-                        <nav>
-                            <ul class="pagination">
-                                <li>
-                                    <
-                                </li>
-                                <li class="page-item">
-                                    1
-                                </li>
-                                <li class="page-item">2
-                                </li>
-                                <li class="page-item">3
-                                </li>
-                                <li class="page-item">4
-                                </li>
-                                <li class="page-item">
-                                    >
-                                </li>
-                            </ul>
-                        </nav>
                     </div>
                 </div>
             </div>
