--- a/product-details.html
+++ b/product-details.html
@@ -261,16 +261,16 @@
                                     </div>
                                 </div>
                             </div>
-                                <div class="col-lg-6 mt-4">
+                                <div class="col-lg-6 col-md-6 mt-4">
                                     <strong><i class="fa fa-credit-card" aria-hidden="true"></i> Thanh toán an toàn</strong>
                                 </div>
-                                <div class="col-lg-6 mt-4">
+                                <div class="col-lg-6 col-md-6 mt-4">
                                     <strong><i class="fa fa-shirt"></i> Sản phẩm chất lượng</strong>
                                 </div>
-                                <div class="col-lg-6 mt-4">
+                                <div class="col-lg-6 col-md-6 mt-4">
                                     <strong><i class="fa fa-truck" aria-hidden="true"></i> Miễn phí giao hàng</strong>
                                 </div>
-                                <div class="col-lg-6 mt-4">
+                                <div class="col-lg-6 col-md-6 mt-4">
                                     <strong><i class="fa fa-retweet" aria-hidden="true"></i> Miễn phí đổi trả</strong>
                                 </div>
                             </div>
@@ -296,7 +296,7 @@
                 </div>
                 <div id="descriptionTab" class="descriptionTabItem d-block">
                     <div class="row">
-                        <div class="col-lg-7">
+                        <div class="col-lg-7 col-md-7">
                             <div class="general">
                                 <p class="mb-4">Tổng quan</p>
                                 <ul>
@@ -309,7 +309,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="col-lg-5">
+                        <div class="col-lg-5 col-md-5">
                             <div class="shipping-policy">
                                 <p class="mb-4">Chất liệu</p>
                                 <ul>
@@ -332,7 +332,7 @@
         <div class="comment">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-5 content-left">
+                    <div class="col-lg-5 col-md-5 content-left">
                         <h2 class="fw-bolder">VIẾT ĐÁNH GIÁ</h2>
                         <form action="" class="custom-form mx-2">
                             <div class="col custom-group star-group">
@@ -362,7 +362,7 @@
     
                         </form>
                     </div>
-                    <div class="col-lg-7 content-right">
+                    <div class="col-lg-7 col-md-5 content-right">
                         <div class="comment-list">
                             <div class="comment-item">
                                 <div class="comment-header">
