--- a/product-details.html
+++ b/product-details.html
@@ -56,16 +56,20 @@
                                 <input type="text" name="search" placeholder="Search..">
                             </div>
                             <div class="col-lg-2 col-md-2">
-                                <i class="fa fa-heart d-block text-danger text-center"></i>
-                                <span class="d-block">Yêu thích</span>
+                                <a class="d-block" href="/favourite.html">
+                                    <i class="fa fa-heart d-block text-danger text-center"></i>
+                                    <p class="d-block text-center m-0" style="font-size: 14px; line-height: 21px;">Yêu thích</p>
+                                </a>
                             </div>
                             <div class="col-lg-2 col-md-2">
                                 <i class="fa fa-user-circle d-block text-danger text-center"></i>
                                 <span class="d-block text-center">Tài khoản</span>
                             </div>
                             <div class="col-lg-2 col-md-2">
-                                <i class="fa fa-shopping-bag d-block text-danger text-center"></i>
-                                <span class="d-block">Giỏ hàng</span>
+                                <a class="d-block" href="/shopping-cart.html">
+                                    <i class="fa fa-shopping-bag d-block text-danger text-center"></i>
+                                    <p class="d-block text-center m-0" style="font-size: 14px; line-height: 21px;">Giỏ hàng</p>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -257,7 +261,7 @@
                                         </button>
                                     </div>
                                     <div class="col-lg-12 col-md-12 mt-2">
-                                        <button type="button" class="btn btn-black btn-block">Mua ngay</button>
+                                        <a href="/checkout.html" class="btn btn-black btn-block">Mua ngay</a>
                                     </div>
                                 </div>
                             </div>
@@ -634,8 +638,8 @@
                     </div>
                     <div class="row mb-4">
                         <div class="col text-center">
-                            <button type="button" class="btn btn-outline-dark mr-3" style="width: 170px;">Xem giở hàng</button>
-                            <button type="button" class="btn btn-dark" style="width: 170px;">Mua ngay</button>
+                            <a href="/shopping-cart.html" type="button" class="btn btn-outline-dark mr-3" style="width: 170px;">Xem giỏ hàng</a>
+                            <a href="/checkout.html" type="button" class="btn btn-dark" style="width: 170px;">Mua ngay</a>
                         </div>
                     </div>
                 </div>
