--- a/checkout-fail.html
+++ b/checkout-fail.html
@@ -97,132 +97,29 @@
         <!-- checkout begin -->
         <div id="checkout" style="margin-top: 40px; margin-bottom: 60px;">
             <div id="checkout-container" class="container">
-                <div class="row">
-                    <div class="col-lg-12 col-md-12 text-center">
-                        <span class="font-weight-bold" style="font-size: 40px;">THANH TOÁN</span>
-                    </div>
-                </div>
-                <div class="row py-5">                    
-                    <div class="col-lg-8 col-md-8">
-                        <form action="" id="checkout-form" class="custom-form mx-2"  onsubmit="checkoutFormSubmit()">
-                            <h4 class="font-weight-bold">ĐỊA CHỈ GIAO HÀNG</h4>
-                            <div class="row">
-                                <div class="col-lg-6 col-md-6 custom-group name-group">
-                                    <label class="" for="lastName">Họ <span class="text-danger">*</span></label>
-                                    <input onkeyup="checkValidate()" type="text" class="mx-0 validate-empty" id="lastName" placeholder="Nhập họ của bạn">
-                                </div>
-                                <div class="col-lg-6 col-md-6 custom-group name-group">
-                                    <label class="" for="firstName">Tên <span class="text-danger">*</span></label>
-                                    <input onkeyup="checkValidate()" type="text" class="mx-0 validate-empty" id="firstName" placeholder="Nhập tên của bạn">
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col custom-group title-group">
-                                    <label class="" for="email">Email <span class="text-danger">*</span></label>
-                                    <input onkeyup="checkValidate()" type="text" class="mx-0 validate-empty" name="email" id="email" placeholder="Email">
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col custom-group title-group">
-                                    <label class="" for="phoneNumber">Số điện thoại <span class="text-danger">*</span></label>
-                                    <input onkeyup="checkValidate()" type="text" class="mx-0 validate-empty" id="phoneNumber" placeholder="Số điện thoại">
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-lg-4 col-md-4 custom-group name-group">
-                                    <label class="" for="province">Tỉnh/TP <span class="text-danger">*</span></label>
-                                    <input onkeyup="checkValidate()" type="text" class="mx-0 validate-empty" id="province" placeholder="Tỉnh/TP">
-                                </div>
-                                <div class="col-lg-4 col-md-4 custom-group name-group">
-                                    <label class="" for="district">Quận/Huyện<span class="text-danger">*</span></label>
-                                    <input onkeyup="checkValidate()" type="text" class="mx-0 validate-empty" id="district" placeholder="Quận/Huyện">
-                                </div>
-                                <div class="col-lg-4 col-md-4 custom-group name-group">
-                                    <label class="" for="name">Xã/Phường <span class="text-danger">*</span></label>
-                                    <input onkeyup="checkValidate()" type="text" class="mx-0 validate-empty" id="commune" placeholder="Xã/Phường">
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col custom-group title-group">
-                                    <label class="" for="title-input">Địa chỉ cụ thể <span class="text-danger">*</span></label>
-                                    <input onkeyup="checkValidate()" type="text" class="mx-0 validate-empty" id="title-input" placeholder="Tóm tắt đánh giá">
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col custom-group title-group">
-                                    <label class="" for="title-input">Hình thức thanh toán <span class="text-danger">*</span></label>
-                                    <div class=" my-2">
-                                        <input type="radio" class="mx-0" name="shipping" value="1" checked>
-                                        <span>
-                                            <i class="fa fa-truck" aria-hidden="true"></i>
-                                            COD - Thanh toán khi nhận hàng
-                                        </span>
-                                    </div>
-                                    <div class=" my-2">
-                                        <input type="radio" class="mx-0" name="shipping" value="2">
-                                        <span>
-                                            <i class="fa fa-qrcode" aria-hidden="true"></i>
-                                            QR - Thanh toán qua mã QR Code liên ngân hàng
-                                        </span>
-                                    </div>
-                                </div>
-                            </div>
-                            <button type="submit" class="col btn btn-danger text-center font-weight-bold mt-4">THANH TOÁN</button>
-    
-                        </form>
-                    </div>
-                    <div id="checkout-product-list" class="col-lg-4 col-md-4 ">
-                        <div class="border px-3 py-4">
-                            <h5 class="font-weight-bold">TỔNG ĐƠN HÀNG: 2 SẢN PHẨM</h5>
-                            <div class="row my-4 item">
-                                <div class="col-lg-4">
-                                    <img class="h-100" src="img/nu/aophong/aophong1/4.webp" alt="">
-                                </div>
-                                <div class="col-lg-8">
-                                    <h6 class="font-weight-bold">Áo phông nữ cotton dáng ngắn in chữ</h6>
-                                    <p>Tím /XL</p>
-                                    <div class="d-flex justify-content-between mt-4">
-                                        <span>x1</span>
-                                        <span><strong>149.500 <span style="text-decoration: underline;">đ</span></strong></span>
-                                    </div>                                    
-                                </div>
-                            </div>
-                            <hr>
-                            <div class="row my-4 item">
-                                <div class="col-lg-4">
-                                    <img class="h-100" src="img/nu/aophong/aophong1/4.webp" alt="">
-                                </div>
-                                <div class="col-lg-8">
-                                    <h6 class="font-weight-bold">Áo phông nữ cotton dáng ngắn in chữ</h6>
-                                    <p>Tím /XL</p>
-                                    <div class="d-flex justify-content-between mt-4">
-                                        <span>x1</span>
-                                        <span><strong>149.500 <span style="text-decoration: underline;">đ</span></strong></span>
-                                    </div>                                    
-                                </div>
+                <div id="checkout-cod" class="row px-5">
+                    <div class="col-lg-12 col-md-12 border p-5 mx-5">
+                        <div class="row">
+                            <div class="col-lg-12 col-md-12 mx-auto text-center">
+                                <i class="fa fa-times-circle text-danger" aria-hidden="true" style="font-size: 114px"></i>
                             </div>
                         </div>
-                        <div class="price">
-                            <div class="d-flex justify-content-between mt-3">
-                                <span><strong>Giá</strong></span>
-                                <span>599.000 <span style="text-decoration: underline;">đ</span></span>
-                            </div>
-                            <div class="d-flex justify-content-between mt-3">
-                                <span><strong>Khuyến mãi</strong></span>
-                                <span>-100.000 <span style="text-decoration: underline;">đ</span></span>
-                            </div>
-                            <div class="d-flex justify-content-between mt-3">
-                                <span><strong>Vận chuyển</strong></span>
-                                <span>+30.000 <span style="text-decoration: underline;">đ</span></span>
-                            </div>
-                            <div class="d-flex justify-content-end mt-3">
-                                <span>-30.000 <span style="text-decoration: underline;">đ</span></span>
-                            </div>
-                            <div class="d-flex justify-content-between mt-3">
-                                <span><strong>Tổng tiền</strong></span>
-                                <span><strong>499.000 <span style="text-decoration: underline;">đ</span></strong></span>
+                        <div class="row mt-2">
+                            <div class="col-lg-12 col-md-12 mx-auto text-center">
+                                <h3 class="font-weight-bold">ĐẶT HÀNG THẤT BẠI</h3>
                             </div>
                         </div>
+                        <div class="text-center mt-3">
+                            <p class="my-0"><strong>Đơn hàng 0198743 chưa được thanh toán</strong></p>
+                            <p class="mt-2 mb-0">Nguyên nhân: <span><strong>Chưa xác nhận giao dịch</strong></span></p>
+                            <p class="mt-2 mb-0">Bấm<span><strong> Quay về trang chủ</strong></span> để tiếp tục mua sắm</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-12 col-md-12 mt-4 text-center px-5 mx-5">
+                        <h5><strong>Scarlet rất hân hạnh được phục vụ bạn!</strong></h5>
+                    </div>  
+                    <div class="col-lg-12 col-md-12 mt-5 mx-5 px-0">
+                        <a href="/" class="col btn btn-dark text-center">QUAY VỀ TRANG CHỦ</a>
                     </div>
                 </div>
             </div>
