--- a/favourite.html
+++ b/favourite.html
@@ -91,8 +91,8 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="">
-                            <a href="./index.html">Trang phục</a>
-                            <span class="current-page">Giỏ hàng</span>
+                            <a href="./index.html">Trang chủ</a>
+                            <span class="current-page">Yêu thích</span>
                         </div>
                     </div>
                 </div>
@@ -126,8 +126,8 @@
                                                 <i class="fa fa-heart" aria-hidden="true" style="color: #AD0820;"></i>
                                             </button>
                                         </div>
-                                        <p class="mt-5 fs-32" >Màu sắc: <span>Tím</span></p>
-                                        <p class="mt-4 fs-32" >Kích cỡ: <span>XL</span></p>
+                                        <p class="mt-5" >Màu sắc: <span>Tím</span></p>
+                                        <p class="mt-4" >Kích cỡ: <span>XL</span></p>
                                         <h4 class="mt-5"><strong>149.500 đ</strong></h4>
                                     </div>
                                 </div>
@@ -212,6 +212,7 @@
 
             const items = document.getElementsByClassName('favourite-item')
             if (items.length == 0) {
+                window.scrollTo({ top: 0, behavior: "smooth" });
                 const favouriteContainer = document.getElementById('favourite-container')
                 favouriteContainer.innerHTML = `<div id="favourite-empty" class="row border py-5 px-5">
                     <div class="col">
@@ -222,17 +223,16 @@
                         </div>
                         <div class="row mt-5">
                             <div class="col-lg-12 col-md-12 mx-auto text-center">
-                                <p class="fs-32 font-weight-bold">DANH SÁCH YÊU THÍCH TRỐNG</p>
+                                <p class="font-weight-bold">DANH SÁCH YÊU THÍCH TRỐNG</p>
                             </div>
                         </div>
                         <div class="row mt-3">
                             <div class="col-lg-12 col-md-12 mx-auto text-center">
-                                <p class="fs-32">Không có sản phẩm nào trong danh sách yêu thích của bạn. Bạn có thể tìm thấy nhiều sản phẩm tuyệt với ở của hàng của chúng tôi.</p>
+                                <p class="">Không có sản phẩm nào trong danh sách yêu thích của bạn. Bạn có thể tìm thấy nhiều sản phẩm tuyệt với ở của hàng của chúng tôi.</p>
                             </div>
                         </div>
-                        <a href="#" class="col btn btn-dark text-center fs-28 mt-5 py-2">TIẾP TỤC MUA SẮM</a>
+                        <a href="#" class="col btn btn-dark text-center mt-5 py-2">TIẾP TỤC MUA SẮM</a>
                     </div>
-                    
                 </div>`
             }
         }
