--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="keywords" content="Male_Fashion, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Male-Fashion | Template</title>
-
+    <title>SCARLET</title>
+    <link rel="icon" type="image/x-icon" href="./img/logo/logonew-03.jpg">
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;700;800;900&display=swap"
     rel="stylesheet">
@@ -111,9 +111,9 @@
         </div>
     </div>
     <!-- Page Preloder -->
-    <div id="preloder">
+    <!-- <div id="preloder">
         <div class="loader"></div>
-    </div>
+    </div> -->
     <!-- Header Section Begin -->
     <header class="header mx-3 px-3">
         <div class="container">
@@ -129,7 +129,7 @@
                             <li><a href="./best-seller.html">Sản phẩm bán chạy</a></li>
                             <li><a href="./female.html">Nữ</a></li>
                             <li><a href="./male.html">Nam</a></li>
-                            <li><a href="#">Tin tức</a></li>
+                            <li><a href="./news.html">Tin tức</a></li>
                             <li><a href="./introduce.html">Giới thiệu</a></li>
                             <!-- <li><a href="./shop.html">Shop</a></li>
                             <li><a href="#">Pages</a>
@@ -201,7 +201,7 @@
                     </div>
                 </div> -->
             </div>
-            <div class="hero__items set-bg" data-setbg="img/banner/main.png">
+            <div class="hero__items set-bg" data-setbg="img/banner/slider2.png">
                 <!-- <div class="container">
                     <div class="row">
                         <div class="col-xl-5 col-lg-7 col-md-8">
@@ -271,7 +271,7 @@
     <!-- Product Section Begin -->
     <section class="product spad pt-4">
         <div class="container">
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col-lg-12">
                     <ul class="filter__controls">
                         <li class="active" data-filter="*">Bán chạy</li>
@@ -279,16 +279,14 @@
                         <li data-filter=".hot-sales">Giảm giá</li>
                     </ul>
                 </div>
-            </div>
+            </div> -->
             <div class="row product__filter">
-                <div class="col-lg-3 col-md-6 col-sm-6 col-md-6 col-sm-6 mix new-arrivals">
+                <!-- <div class="col-lg-3 col-md-6 col-sm-6 col-md-6 col-sm-6 mix new-arrivals">
                     <div class="product__item">
                         <div class="product__item__pic set-bg" data-setbg="img/nu/4.jpg">
                             <span class="label">New</span>
                             <ul class="product__hover">
                                 <li><a href="#"><img src="img/icon/heart.png" alt=""></a></li>
-                                <!-- <li><a href="#"><img src="img/icon/compare.png" alt=""> <span>Compare</span></a></li>
-                                <li><a href="#"><img src="img/icon/search.png" alt=""></a></li> -->
                             </ul>
                         </div>
                         <div class="product__item__text">
@@ -316,8 +314,6 @@
                             <span class="label">Sale</span>
                             <ul class="product__hover">
                                 <li><a href="#"><img src="img/icon/heart.png" alt=""></a></li>
-                                <!-- <li><a href="#"><img src="img/icon/compare.png" alt=""> <span>Compare</span></a></li>
-                                <li><a href="#"><img src="img/icon/search.png" alt=""></a></li> -->
                             </ul>
                         </div>
                         <div class="product__item__text">
@@ -338,6 +334,9 @@
                             </div>
                         </div>
                     </div>
+                </div> -->
+                <div class="col-12 py-3">
+                    <h3 class="text-center"><strong>SẢN PHẨM BÁN CHẠY</strong></h3>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-6 col-md-6 col-sm-6 mix hot-sales">
                     <div class="product__item sale">
@@ -454,6 +453,11 @@
                             </div>
                         </div>
                     </div>
+                </div>
+                <div class="col-12 pt-3 pb-5">
+                    <h3 class="text-center">
+                        <a href="./best-seller.html" style="color: red; background-color: white; border: 2px solid red; font-size: 14px; padding: 10px 20px;">Xem thêm</a>
+                    </h3>
                 </div>
             </div>
         </div>
