--- a/account.html
+++ b/account.html
@@ -7,7 +7,8 @@
     <meta name="keywords" content="Male_Fashion, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Male-Fashion | Template</title>
+    <title>SCARLET</title>
+    <link rel="icon" type="image/x-icon" href="./img/logo/logonew-03.jpg">
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;700;800;900&display=swap"
@@ -96,9 +97,9 @@
         }
     </style>
     <!-- Page Preloder -->
-    <div id="preloder">
+    <!-- <div id="preloder">
         <div class="loader"></div>
-    </div>
+    </div> -->
     <!-- Header Section Begin -->
     <header class="header mx-3 px-3">
         <div class="container">
