--- a/admin-products.html
+++ b/admin-products.html
@@ -112,10 +112,10 @@
                     <div id="table-filter" class="row">
                         <div class="d-flex flex-column w-100">
                             <div class="d-flex justify-content-end mr-3">
-                                <a id="btn-add" class="btn btn-light text-danger" href="">
+                                <a id="btn-add" class="btn btn-light text-danger" href="/admin-product-add.html">
                                     <i class="fa fa-plus" aria-hidden="true"></i>
                                 </a>
-                                <a id="btn-edit" class="btn btn-light ml-2 disabled">
+                                <a id="btn-edit" class="btn btn-light ml-2 disabled" href="/admin-product-edit.html">
                                     <i class="fa fa-pencil" aria-hidden="true"></i>
                                 </a>
                                 <a id="btn-delete" class="btn btn-light ml-2 disabled">
